Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-01-20 (SVN):
    * vid_win.c, vid_mgl4.c: Restore saved video mode on startup. Not
      exactly beautiful, but at least it works now...

2012-01-20 (SVN):
    * screen.c, gl_screen.c: Updated hw showfps code from quakespasm and
      copied over to hexen2, too.

2012-01-20 (SVN):
    * hexenworld cl_main.c: Reverted rev. 4471 and made the default rate
      value form 2500 again for now.
    * updated beta date stamp to 2012-01-20.

2012-01-19 (SVN):
    * hexenworld, gl_screen.c (SCR_UpdateScreen): Make sure vid.numpages
      is set correctly.
    * hexenworld: Moved fps display variables from clmain.c to screen.c.

2012-01-19 (SVN):
    * hexenworld cl_main.c: Changed default rate value form 2500 to 5760
      i.e. 72 fps.

2012-01-19 (SVN):
    * hexenworld screen.c, gl_screen.c (SCR_UpdateScreen): SCR_DrawFPS()
      must be called after Sbar_Draw() so that it is actually visible on
      the screen.

2012-01-19 (SVN):
    * cd_win.c, gl_vidnt.c, vid_mgl4.c, vid_win.c: The window procedure
      must return not LONG but LRESULT which really is a LONG for win32
      but a LONG_PTR for win64.
    * gl_vidnt.c, vid_mgl4.c, vid_win.c: simplified the MSWHEEL_ROLLMSG
      code a bit.
    * updated beta date stamp to 2012-01-19.

2012-01-15 (SVN):
    * h2/axe.hc (axetail_run): if no owner, remove self and return (just
      in case. merged from the mission pack.)
    * portals/allplay.hc (PlayerSpeed_Calc): removed duplicated assignment
      to self.hasted for CLASS_ASSASSIN and CLASS_SUCCUBUS cases.
    * h2/doors.hc (door_sounds): removed duplicated precache_sound() call
      for misc/null.wav
    * MG_AI.hc: Sanitized whitespace style. In the mission pack version,
      changed CheckJump() call to take no arguments and commented out the
      dprints, just like in h2: the function already used to set its own