@@ -192,6 +192,109 @@ void AngleVectors (vec3_t angles, vec3_t forward, vec3_t right, vec3_t up)
 }
 
 
+#define DEG2RAD(a) (a * (M_PI / 180.0))
+
+static void ProjectPointOnPlane (vec3_t dst, const vec3_t p, const vec3_t normal)
+{
+	float		inv_denom, d;
+	vec3_t		n;
+
+	inv_denom = 1.0f / DotProduct (normal, normal);
+
+	d = DotProduct (normal, p) * inv_denom;
+
+	VectorScale (normal, inv_denom * d, n);
+
+	VectorSubtract (p, n, dst);
+}
+
+// assumes "src" is normalized
+static void PerpendicularVector (vec3_t dst, const vec3_t src)
+{
+	int		pos, i;
+	float		minelem = 1.0f;
+	vec3_t		tempvec;
+
+	/* find the smallest magnitude axially aligned vector */
+	for (pos = 0, i = 0; i < 3; i++)
+	{
+		if (fabs (src[i]) < minelem)
+		{
+			pos = i;
+			minelem = fabs (src[i]);
+		}
+	}
+	VectorClear (tempvec);
+	tempvec[pos] = 1.0f;
+
+	/* project the point onto the plane defined by src */
+	ProjectPointOnPlane (dst, tempvec, src);
+
+	/* normalize the result */
+	VectorNormalize (dst);
+}
+
+#if defined(_MSC_VER)
+# pragma optimize( "", off )
+#endif
+void RotatePointAroundVector (vec3_t dst, const vec3_t axis, const vec3_t point,
+			      float degrees)
+{
+	float		m[3][3];
+	float		im[3][3];
+	float		zrot[3][3];
+	float		tmpmat[3][3];
+	float		rot[3][3];
+	float		rad;
+	vec3_t		vr, v_up, vf;
+
+	VectorCopy (axis, vf);
+
+	PerpendicularVector (vr, axis);
+	CrossProduct (vr, vf, v_up);
+
+	m[0][0] = vr[0];
+	m[1][0] = vr[1];
+	m[2][0] = vr[2];
+
+	m[0][1] = v_up[0];
+	m[1][1] = v_up[1];
+	m[2][1] = v_up[2];
+
+	m[0][2] = vf[0];
+	m[1][2] = vf[1];
+	m[2][2] = vf[2];
+
+	memcpy (im, m, sizeof (im));
+
+	im[0][1] = m[1][0];
+	im[0][2] = m[2][0];
+	im[1][0] = m[0][1];
+	im[1][2] = m[2][1];
+	im[2][0] = m[0][2];
+	im[2][1] = m[1][2];
+
+	memset (zrot, 0, sizeof (zrot));
+	zrot[0][0] = zrot[1][1] = zrot[2][2] = 1.0f;
+
+	rad = DEG2RAD (degrees);
+	zrot[0][0] = cos (rad);
+	zrot[0][1] = sin (rad);
+	zrot[1][0] = -sin (rad);
+	zrot[1][1] = cos (rad);
+
+	R_ConcatRotations (m, zrot, tmpmat);
+	R_ConcatRotations (tmpmat, im, rot);
+
+	dst[0] = DotProduct (rot[0], point);
+	dst[1] = DotProduct (rot[1], point);
+	dst[2] = DotProduct (rot[2], point);
+}
+
+#if defined(_MSC_VER)
+# pragma optimize( "", on )
+#endif
+
 /*
 ================
 R_ConcatRotations
