@@ -115,6 +115,9 @@ static inline float VectorNormalize (vec3_t v)
 
 int Q_log2(int val);
 
+void RotatePointAroundVector (vec3_t dst, const vec3_t axis, const vec3_t point,
+			      float degrees);
+
 void R_ConcatRotations (float in1[3][3], float in2[3][3], float out[3][3]);
 void R_ConcatTransforms (float in1[3][4], float in2[3][4], float out[3][4]);
 
