@@ -1565,13 +1565,26 @@ static void R_SetFrustum (void)
 {
 	int		i;
 
-	// front side is visible
+	if (r_refdef.fov_x == 90)
+	{
+		// front side is visible
+		VectorAdd (vpn, vright, frustum[0].normal);
+		VectorSubtract (vpn, vright, frustum[1].normal);
 
-	VectorAdd (vpn, vright, frustum[0].normal);
-	VectorSubtract (vpn, vright, frustum[1].normal);
-
-	VectorAdd (vpn, vup, frustum[2].normal);
-	VectorSubtract (vpn, vup, frustum[3].normal);
+		VectorAdd (vpn, vup, frustum[2].normal);
+		VectorSubtract (vpn, vup, frustum[3].normal);
+	}
+	else
+	{
+		// rotate VPN right by FOV_X/2 degrees
+		RotatePointAroundVector(frustum[0].normal, vup,    vpn, -(90 - r_refdef.fov_x / 2));
+		// rotate VPN left by FOV_X/2 degrees
+		RotatePointAroundVector(frustum[1].normal, vup,    vpn,   90 - r_refdef.fov_x / 2);
+		// rotate VPN up by FOV_X/2 degrees
+		RotatePointAroundVector(frustum[2].normal, vright, vpn,   90 - r_refdef.fov_y / 2);
+		// rotate VPN down by FOV_X/2 degrees
+		RotatePointAroundVector(frustum[3].normal, vright, vpn, -(90 - r_refdef.fov_y / 2));
+	}
 
 	for (i = 0; i < 4; i++)
 	{
@@ -1636,7 +1649,6 @@ R_SetupGL
 static void R_SetupGL (void)
 {
 	float	screenaspect;
-	float	yfov;
 	int	x, x2, y2, y, w, h;
 
 	//
@@ -1671,8 +1683,7 @@ static void R_SetupGL (void)
 
 	glViewport_fp (glx + x, gly + y2, w, h);
 	screenaspect = (float)r_refdef.vrect.width/r_refdef.vrect.height;
-	yfov = 2*atan((float)r_refdef.vrect.height/r_refdef.vrect.width)*180/M_PI;
-	MYgluPerspective (yfov, screenaspect, 4, 4096);
+	MYgluPerspective (r_refdef.fov_y, screenaspect, 4, 4096);
 
 	if (mirror)
 	{
