@@ -17,6 +17,9 @@ Changes since the uhexen2-1.5.1 release:
 * All platforms: Added on-screen fps counter to hexen2 (do
   "showfps 1" from the console).  Updated existing showfps
   code of hexenworld.
+* All platforms: Implemented fov in opengl hexen2, useful
+  for widescreen resolutions. Revised the implementations
+  in hexenworld, as well as the software renderer.
 * All platforms, input: Discard mouse/joystick motion when
   in cameramode. Discard the accumulated mouse motion when
   starting a game or when loading a saved game to prevent
